# wasmo

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  IDEAS.md  README.md
cli/: Cargo.toml
compiler/: Cargo.toml
compiler/lib/: compiler.rs  imports.rs  instance.rs  lib.rs  module.rs
crates/llvm/: Cargo.toml  README.md
fuzz/: Cargo.toml
llvm/: Cargo.toml  README.md
llvm/lib/: basic_block.rs  builder.rs  context.rs  function.rs  intrinsics.rs  lib.rs  llvm.rs  macros.rs  module.rs  string.rs  target.rs  target_machine.rs  types.rs  values.rs
projects/compiler/: Cargo.toml
runtime/: Cargo.toml  errors.rs  lib.rs
runtime/api/: instance.rs  module.rs
runtime/api/imports/: imports.rs  mod.rs
runtime/api/store/: mod.rs  store.rs
runtime/compiler/: compiler.rs  conversions.rs  exports.rs  global.rs  imports.rs  memory.rs  mod.rs  table.rs  utils.rs  value.rs
runtime/compiler/generator/: function.rs  mod.rs  operator.rs
runtime/examples/: module.rs
runtime/lib/: api.rs  compiler.rs  context.rs  errors.rs  export.rs  import.rs  instance.rs  intrinsics.rs  lib.rs  limits.rs  module.rs  options.rs  store.rs  types.rs
runtime/lib/api/: imports.rs  instance.rs  module.rs  options.rs  store.rs
runtime/lib/api/imports/: imports.rs  memory.rs  mod.rs
runtime/lib/api/store/: store.rs
runtime/lib/compiler/: compiler.rs  data.rs  elem.rs  exports.rs  function.rs  global.rs  imports.rs  llvm.rs  memory.rs  mod.rs  table.rs  utils.rs  value.rs
runtime/lib/compiler/llvm/: addresses.rs  basic_block.rs  context.rs  function.rs  llvm.rs  mod.rs  module.rs  orc.rs  target.rs  target_machine.rs  types.rs  utils.rs
runtime/lib/context/: address.rs  resolver.rs  sizes.rs  target.rs
runtime/lib/store/: data.rs  elem.rs  function.rs  global.rs  memory.rs  store.rs  table.rs
src/: Cargo.toml
tests/: Cargo.toml  lib.rs  runtime.rs
tests/runtime/: module.rs
tests/samples/: add.wat  control.wat  experiment.wat  fibonacci.wat
wasmo-llvm/lib/: basic_block.rs  builder.rs  context.rs  intrinsics.rs  llvm.rs
wasmo-runtime/: Cargo.toml  errors.rs
wasmo-runtime/api/: options.rs
wasmo-runtime/compiler/: compiler.rs  imports.rs
wasmo-runtime/examples/: module.rs
wasmo-tests/: Cargo.toml
wasmo-tests/samples/: control.wat  fibonacci.wat
(+19 files in other folders)
