[package]
name = "wasmo-runtime"
version = "0.1.0"
edition = "2021"
description = "The Wasmo Runtime"
license-file = "../LICENSE"
repository = "https://github.com/appcypher/wasmo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm = { package = "wasmo-llvm", path = "../llvm" }
anyhow = "1.0"
wasmparser = "0.82.0"
env_logger = "0.9.0"
wat = "1.0.41"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
bytecheck = "0.6.7"
log = "0.4.14"

[lib]
path = "lib.rs"
