[package]
name = "wasmo-runtime"
version = "0.1.0"
edition = "2021"
description = "The Wasmo Runtime"
license-file = "../LICENSE"
repository = "https://github.com/appcypher/wasmo"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bytecheck = "0.6.7"
dyn-clone = "1.0.5"
env_logger = "0.9.0"
hashbrown = "0.12.0"
llvm = { package = "wasmo-llvm", path = "../llvm" }
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
wasmparser = { version = "0.86.0", default-features = false }
wat = "1.0.41"

[lib]
path = "lib.rs"
